# 3D-Rasterizer

./: .gitignore  CMakeLists.txt  README.md  buildandrun.bat  buildandrun.sh  hardbuildandrun.sh
assets/Meshes/: cube.3d
include/Engine/: Debug.h  Engine.h  Events.h  Tests.h
include/Engine/core/: Camera.h  EngineObject.h  Mesh.h  Polygon.h  Scene.h  Vector3.h  core.h  math.h
include/Engine/rendering/: draw.h  render.h
include/Engine/resources/: loader.h  resources.h
src/: main.cpp
src/Engine/: Debug.cpp  Engine.cpp  Engine.h  Events.cpp  Tests.cpp
src/Engine/core/: EngineObject.h  Mesh.h  Polygon.h  Scene.cpp  Scene.h  Vector3.h  core.cpp  core.h  math.cpp
src/Engine/rendering/: draw.cpp  drawing.cpp  render.cpp
src/Engine/resources/: loader.cpp
